--- a/paper/sysml.tex
+++ b/paper/sysml.tex
@@ -67,11 +67,11 @@
 }
 \email{cynthia@cs.duke.edu}
 
-\maketitle
-
 \setlength{\abovedisplayskip}{3pt}
-\setlength{\belowdisplayskip}{3pt}
-\setlength{\belowcaptionskip}{-10pt}
+\setlength{\belowdisplayskip}{-10pt}
+\setlength{\textfloatsep}{8pt}
+
+\maketitle
 
 \section{Introduction}
 Decision trees are an extremely influential prediction technique in AI.
@@ -86,7 +86,7 @@ Finding the optimal rule list from a set of rules is an NP-hard combinatorial pr
 Most decision tree construction strategies solve this by quickly finding an approximate through greedy  methods \citep{BreimanFrOlSt84, Quinlan93}.
 Other fields solve similar NP-hard combinatorial problems through the use of branch-and-bound \citep{Clausen99}.
 Traditionally, branch-and-bound has only been applied to small problems because the search space is otherwise enormous, even when tight bounds allow for the pruning of the space.
-Our use of a branch-and-bound search strategy and the full description of CORELS, including proofs of our bounds, can be found in our previous work \cite{AngelinoLaAlSeRu17}.
+Our use of a branch-and-bound search strategy and the full description of CORELS, including proofs of our bounds, can be found in our previous work \cite{AngelinoLaAlSeRu17, ErtekinRu17}.
 Unlike prior greedy approaches, branch-and-bound allows us to find the optimal rule list and certify its optimality.
 
 \begin{figure}[ht!]
@@ -108,12 +108,14 @@ Each of the remaining solutions is the same or similar to one of these, with pre
 A rule list is comprised of an ordered list of rules, an example of which can be seen in Fig \ref{fig:recidivism}.
 Rules are features or conjunctions of features that uniformly classify a subset of the observations.
 For a given rule list, we calculate both how many observations the list incorrectly classifies as well as a lower bound on how many observations it could ever incorrectly classify.
-Our objective function combines the first metric, normalized to measure misclassification error, with a regularization term that penalizes longer rule lists.
-The second piece of information is used to provide a bound for how well the rule list could ever perform.
+Calculating each of these metrics from scratch each time would be inefficient; instead, metrics are calculated incrementally using metadata recorded for the parent rule list.
+This incremental computation required the use of a specialized prefix tree to keep track of our computation.
+Our objective function combines the number of incorrectly classified observations, normalized to measure misclassification error, with a regularization term that penalizes longer rule lists.
+The maximum number of mistakes is used to provide a bound for how well the rule list could ever perform.
 Using those two metrics, we are able to compare the future performance of a rule list to the current best rule list we have seen so far.
 If the best future performance is worse than the performance of a rule list we have already seen, then we know it can not be the optimal rule list so we can prune it.
-We have a number of other bounds that we also apply to allow us to prune rule lists.
-We incrementally compute each of these bounds; for every rule list we examine, we calculate the bounds of its children based on the metrics we have already calculated.
+We also have a number of other bounds that we apply to allow us to aggressively prune the search space.
+These algorithmic bounds allow for efficient execution of our algorithm, while the data structures and systems optimizations we implemented are crucial for the calculation of these bounds.
 
 Even with our bounds, though, we would be unable to complete a full execution of our algorithm if we had not optimized the execution of our algorithm.
 In our earlier work, we performed a number of experiments on the COMPAS dataset \cite{LarsonMaKiAn16}, attempting to predict whether or not an individual would recidivate within 2 years.
@@ -124,12 +126,12 @@ However, in our final implementation, each evaluation takes only 1.3~$\mu$s, all
 Systems optimizations, even on just a single processor, allow us to solve an NP-hard problem of reasonable size in under a minute.
 
 \section{Implementation}
-Our algorithm is feasible only through the use of three core data structures.
+Our algorithm is feasible due to the use of three core data structures.
 Firstly, we use a prefix tree to organize and cache our exploration through the search space.
-The incremental nature of our algorithm requires that we store rule lists that we examined and did not discard.
+The incremental nature of our algorithm requires that we store rule lists that we examined but did not discard.
 The prefix tree structure allows us to easily access values in a parent rule list to calculate bounds for a new rule list.
-Next, we organize our search strategy through the use of a priority queue.
-Finally, in order to implement one of our critical bounds, we designed a novel data structure that we term a symmtery-aware map.
+Next, we organize our search strategy with a priority queue.
+Finally, in order to implement one of our critical bounds, we designed a novel data structure that we term a symmetry-aware map.
 It allows us to easily compare and prune rule lists that are created from the same set of rules (i.e. permutations of each other).
 
 \begin{itemize}[leftmargin=*, itemsep=0.8\baselineskip]
@@ -162,10 +164,10 @@ Thus, speeding up these computations would accelerate the execution of our algor
 \vspace{0.5\baselineskip}
 
 Each one of these structures and optimizations is critical for the success of our algorithm.
-For example, we briefly experimented with a stochastic search policy that didn't use a queue at all but instead followed random paths from the queue to a leaf.
+For example, we briefly experimented with a stochastic search policy that did not use a queue at all but instead followed random paths from the queue to a leaf.
 However, this search strategy performed worse than any strategy involving our queue, so we proceeded only by using the queue.
 Fig \ref{fig:ablation} shows another example of how important data structure design is for solving hard problems such as ours.
-It demonstrates how simply removing the symmetry-aware map can turn a less than 60s execution on a dataset to something that is computationally intractable.
+It demonstrates how simply adding the symmetry-aware map can turn a computationally intractable problem into an execution that completes in under 60s.
 
 \begin{figure}[t!]
 \begin{center}
