Added files for SysML plot

--- a/paper/sys_refs.bib
+++ b/paper/sys_refs.bib
@@ -62,6 +62,16 @@ journal={ProPublica},
 year={2016}
 }
 
+@inproceedings{AngelinoLaAlSeRu17-kdd,
+author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
+title = "Learning certifiably optimal rule lists for categorical data",
+booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'17)}},
+year = {2017},
+location = {Halifax, Nova Scotia, Canada},
+__pages = {},
+year = {2017}
+}
+
 @article{AngelinoLaAlSeRu17,
 author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
 title = "Learning certifiably optimal rule lists for categorical data",
@@ -75,4 +85,12 @@ month = nov
     author={N. L. Larus-Stone},
     note={Undergraduate thesis, Harvard College},
     year={2017}
+}
+
+@unpublished{ErtekinRu17,
+__author={Seyda Ertekin and Cynthia Rudin},
+author={S. Ertekin and C. Rudin},
+title={Learning Customized and Optimized Lists of Rules with Mathematical Programming},
+year={2017},
+note={Unpublished}
 }
