--- a/paper/sysml.tex
+++ b/paper/sysml.tex
@@ -118,23 +118,23 @@ We generate rule lists by adding a rule to the end of a pre-existing rule list.
 For a given rule list, any longer rule list that starts with the same rules will make the same mistakes as the shorter one.
 To encapsulate this relationship, we call the original rule list a parent and the longer rule list a child.
 We calculate both how many observations the list incorrectly classifies as well as a lower bound on the number of mistakes made by any child rule lists.
-Calculating each of these metrics from scratch each time would be inefficient; instead, metrics are calculated incrementally using metadata recorded for parent rule list.
-The incremental computation takes advantage of a specialized, space-efficient prefix tree by building off of previous computation of parent rule lists.
-We systematically search the entire space of rule lists, evaluating them in an order specified by our priority metric; for example, a breadth-first search priority metric entails us examining shorter rule lists before longer ones.
+Calculating each of these metrics from scratch each time would be inefficient; instead, metrics are calculated incrementally using metadata recorded for the parent rule list.
+The incremental computation takes advantage of a specialized, space-efficient prefix tree by reusing previous computation from parent rule lists.
+We systematically search the entire space of rule lists, evaluating them in an order specified by our search policy; for example, a breadth-first search policy examines shorter rule lists before longer ones.
 
 Our objective function combines the number of incorrectly classified observations, normalized to measure misclassification error, with a regularization term that penalizes longer rule lists.
 The maximum number of mistakes provides a bound for how well the children of a rule list could ever perform.
-Using those two metrics, we are able to compare the future performance of all of a rule list's children to the current best rule list we have seen so far.
-If the best future performance is worse than the performance of a rule list we have already seen, then we know it can not be the optimal rule list, thus we can prune it.
+Using those two metrics, we are able to compare the potential performance of all of a rule list's children to the current best rule list we have seen so far.
+If the best potential performance is worse than the performance of a rule list we have already seen, then we know it cannot be the optimal rule list, and thus we can prune it.
 We also proved a suite of additional algorithmic bounds that interact to aggressively prune the search space.
 In our implementation, we exploit these bounds via several data structures.  
 Together with additional systems optimizations, our approach efficiently searches the space of rule lists to find a provably optimal solution.
 
-In our earlier work, we performed a number of experiments on the ProPublica COMPAS dataset \cite{LarsonMaKiAn16} and predicted whether or not an individual would recidivate within 2 years.
-This dataset contains 122 rules ; therefore, a brute force search of all possible rule lists up to length 10 would require evaluating ${5.0 \times 10^{20}}$ rule lists.
+In previous work, we performed experiments using the ProPublica COMPAS dataset \cite{LarsonMaKiAn16}, focusing on the prediction problem of whether or not an individual would recidivate within two years.
+This dataset contains 122 rules; therefore, a brute force search of all possible rule lists up to length 10 would require evaluating ${5.0 \times 10^{20}}$ rule lists.
 Due to our algorithmic bounds, CORELS only examines 28 million rule lists, a reduction of ${1.8 \times 10^{13}}$.
-Between the numerous bit vector operations and the pruning required, a non-optimized implementation of our algorithm would not complete.
-However, in our final implementation, each evaluation takes only 1.3~$\mu$s, allowing us to complete that moderately sized problem in 36s.
+Between the bookkeeping required to search and prune the state space, and the numerous bit vector operations required to evaluate each rule list, a non-optimized implementation of our algorithm would not complete.
+However, with CORELS, each evaluation takes only 1.3~$\mu$s, allowing us to complete that moderately sized problem in 36s.
 Systems optimizations, even on just a single processor, allow us to solve a computationally hard problem of reasonable size in under a minute.
 
 \section{Implementation}
