--- a/paper/sysml.tex
+++ b/paper/sysml.tex
@@ -210,11 +210,11 @@ On more computationally complex datasets, such as the NYPD stop-and-frisk datase
 \resizebox{\columnwidth}{!}{%
 \begin{tabular}{|l|c c|c c|c c|c|}
 \hline
-\shortstack{Dataset} & \shortstack{Time (s) \\ w/map} & \shortstack{Mem (MB) \\ w/map} & \shortstack{Time (s) \\ no map} & \shortstack{Mem (MB) \\ no map} & \shortstack{Speedup \\ gain (\%)} & \shortstack{Memory \\ savings (\%)} & \shortstack{\# \\ samples} \\ \hline
+\shortstack{Dataset} & \shortstack{Time \\ w/map \\ (s)} & \shortstack{Memory \\ w/map \\ (MB)} & \shortstack{Time \\ no map \\ (s)} & \shortstack{Memory \\ no map \\ (MB)} & \shortstack{Speedup \\ gain \\ (\%)} & \shortstack{Memory \\ savings \\ (\%)} & \shortstack{Number \\ of \\ samples} \\ \hline
 B. cancer & 3,206 & {3,078} & 14,039 & {8,598} & 77 & 64 & 684 \\
 Haberman  & 8.5 & {61} & 33 & {104} & 75 & 42 & 307 \\
 MONKS-1 & 0.29 & {\textless0.1} & 0.36 & {\textless0.1} & 19 & \textless1 & 432 \\
-MONKS-3 & 0.10 & {\textless0.1} & 0.14 & {\textless.1} & 29 & \textless1 & 432 \\
+MONKS-3 & 0.10 & {\textless0.1} & 0.14 & {\textless0.1} & 29 & \textless1 & 432 \\
 Votes  & 8.3 & {44} & 24 & {79} & 66 & 44 & 436 \\
 NYPD & 1,728 & {641} & ??? & {\textgreater12,288} & \textgreater72 & \textgreater95 & 566,839 \\ \hline
 Average & 645 & {956} & 3,374 & {\textgreater 5,267} & \textgreater81 & \textgreater81 & --- \\ \hline
